fix iPad overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -953,3 +953,7 @@ footer.site-footer {
     }
   }
 }
+
+.overflow-fix {
+  overflow-x: hidden;
+}
